@startuml

title __PREFERENCES's Class Diagram__\n

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.Constants {
        {static} + ALERTS_FOLDER_PATH : String
        {static} + BOMBER_CARRY_LIMIT : int
        {static} + BOMBER_WEAPONS : String[]
        {static} + DEFAULT_SHARED_UPDATE_INTERVAL : int
        {static} + EVENTS_FOLDER_PATH : String
        {static} + HELICOPTER_CREW_LIMIT : int
        {static} + MODELS_FILENAME : String
        {static} + MODELS_FULL_NAME : String
        {static} + MODELS_HELICOPTERS : String[]
        {static} + MODELS_MILITARY_BOMBERS : String[]
        {static} + MODELS_MILITARY_PLANES : String[]
        {static} + MODELS_PLANES : String[]
        {static} + PLANE_CARRY_LIMIT : int
        {static} + PLANE_CREW_LIMIT : int
        {static} + PLANE_WEAPONS : String[]
        {static} + PREFERENCES_FOLDERNAME : String
        {static} + RADAR_PROPERTIES_FILENAME : String
        {static} + RADAR_PROPERTIES_FULL_NAME : String
        {static} + SIMULATOR_DEFAULT_FOREIGN_MIL : int
        {static} + SIMULATOR_DEFAULT_HOME_MIL : int
        {static} + SIMULATOR_DEFAULT_SIZE : int
        {static} + SIMULATOR_DEFAULT_SPAWN_MAX : int
        {static} + SIMULATOR_DEFAULT_SPAWN_MIN : int
        {static} + SIMULATOR_DEFAULT_SPEED_MAX : int
        {static} + SIMULATOR_DEFAULT_SPEED_MIN : int
        {static} + SIMULATOR_HEIGHT_OPTIONS : int[]
        {static} + SIMULATOR_PROPERTIES_FILENAME : String
        {static} + SIMULATOR_PROPERTIES_FULL_NAME : String
        {static} + SIMULATOR_SHARED_FILENAME : String
        {static} + SIMULATOR_SHARED_FILE_FULL_NAME : String
        {static} + SIMULATOR_SHARED_FOLDERNAME : String
        {static} + WEAPONS_PROPERTIES_FILENAME : String
        {static} + WEAPONS_PROPERTIES_FULL_NAME : String
        {static} - separator : String
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.GenericPreferences {
        - filename : String
        + GenericPreferences()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.ModelPreferences {
        - helicopters : String[]
        - militaryBombers : String[]
        - militaryPlanes : String[]
        - planes : String[]
        + getHelicopters()
        + getMilitaryBombers()
        + getMilitaryPlanes()
        + getPlanes()
        {static} + load()
        {static} - initHardcoded()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.PreferenceWatcher {
        - changed : boolean
        - fileName : String
        - loader : Supplier<T>
        - trackingFields : List<Field>
        - watchService : WatchService
        + PreferenceWatcher()
        + getOriginal()
        + isChanged()
        + run()
        + setChanged()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.PreferencesHelper {
        {static} + createFolderIfNotExists()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.RadarPreferences {
        - fileUpdateTime : int
        + RadarPreferences()
        + getFileUpdateTime()
        {static} + load()
        {static} - initHardcoded()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.SimulatorPreferences {
        - fieldHeight : int
        - fieldWidth : int
        - foreignMilitary : int
        - heightOptions : int[]
        - homeMilitary : int
        - sharedFileName : String
        - sharedFolder : String
        - sharedFullName : String
        - spawnTimeMax : int
        - spawnTimeMin : int
        - speedMax : int
        - speedMin : int
        + getFieldHeight()
        + getFieldWidth()
        + getForeignMilitary()
        + getHeightOptions()
        + getHomeMilitary()
        + getSharedFileName()
        + getSpawnTimeMax()
        + getSpawnTimeMin()
        + getSpeedMax()
        + getSpeedMin()
        {static} + load()
        {static} - initHardcoded()
    }
  }
  

  namespace jovic.dragan.pj2.preferences {
    class jovic.dragan.pj2.preferences.WeaponPreferences {
        - bomberCarryLimit : int
        - bomberWeapons : String[]
        - planeCarryLimit : int
        - planeWeapons : String[]
        + getBomberCarryLimit()
        + getBomberWeapons()
        + getPlaneCarryLimit()
        + getPlaneWeapons()
        {static} + load()
        {static} - initHardcoded()
    }
  }
  

  jovic.dragan.pj2.preferences.GenericPreferences o-- T : preferences
  jovic.dragan.pj2.preferences.ModelPreferences .up.|> java.io.Serializable
  jovic.dragan.pj2.preferences.PreferenceWatcher o-- T : original
  jovic.dragan.pj2.preferences.SimulatorPreferences .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
